welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:27: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var testCouleur : Color
      ^SlugSnail:27: error: local variables must be initialized
  var testCouleur : Color
      ^